Deploy v1.4.0